# aws-automation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.claude/: hooks.json  mcp.json  settings.local.json
.claude/agents/: aws-expert.md  code-reviewer.md  cost-optimizer.md  designer.md  doc-generator.md  implementer.md  migration.md  performance.md  planner.md  plugin-scaffolder.md  review-pr.md  security-reviewer.md  test-writer.md  troubleshooter.md
.claude/commands/: add-plugin-tool.md  commit.md  coverage.md  lint.md  make-plugin-service.md  make-test.md  migrate-tool.md  release.md  review-pr.md  review.md  sync-index.md
.claude/skills/: analyzers-vs-reports.md  aws-boto3-patterns.md  cli-output-style.md  cloudwatch-metrics-patterns.md  commit-conventional.md  debugging-troubleshooting.md  error-handling-patterns.md  excel-patterns.md  index.md  inventory-collector-patterns.md  output-patterns.md  parallel-execution-patterns.md  plugin-development.md  plugin-metadata-schema.md  python-best-practices.md  security-review.md  tdd-workflow.md  versioning.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: release.py
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  publish.yml  update-regions.yml
analyzers/acm/: unused.py
analyzers/apigateway/: unused.py
analyzers/backup/: audit.py  collectors.py  comprehensive.py
analyzers/cloudformation/: __init__.py  resource_finder.py
analyzers/cloudtrail/: security_events.py  trail_audit.py
analyzers/cloudwatch/: alarm_orphan.py  loggroup_audit.py
analyzers/codecommit/: unused.py
analyzers/cost/: __init__.py
analyzers/dynamodb/: capacity_mode.py  unused.py
analyzers/ec2/: __init__.py  ami_audit.py  ami_cleanup.py  ebs_audit.py  ebs_encryption.py  eip_audit.py  inventory.py  snapshot_audit.py  snapshot_cleanup.py  unused.py
analyzers/ecr/: unused.py
analyzers/efs/: __init__.py  unused.py
analyzers/elasticache/: common.py  unused.py
analyzers/elb/: alb_log.py  alb_log_report.py  alb_unused.py  clb_unused.py  common.py  inventory.py  listener_rules.py  migration_advisor.py  nlb_unused.py  security_audit.py  target_group_audit.py  unused.py
analyzers/eventbridge/: unused.py
analyzers/fn/: __init__.py  comprehensive.py  provisioned.py  runtime_deprecated.py  unused.py  versions.py
analyzers/fsx/: unused.py
analyzers/glue/: unused.py
analyzers/health/: analysis.py  issues.py  patch_analysis.py
analyzers/iam/: __init__.py  iam_audit.py  unused_roles.py  unused_roles_reporter.py  user_snapshot.py  user_snapshot_reporter.py
analyzers/kinesis/: unused.py
analyzers/kms/: audit.py  key_usage.py  unused.py
analyzers/opensearch/: unused.py
analyzers/rds/: snapshot_audit.py  unused.py
analyzers/redshift/: __init__.py  unused.py
analyzers/route53/: empty_zone.py
analyzers/s3/: empty_bucket.py
analyzers/sagemaker/: unused.py
analyzers/secretsmanager/: unused.py
analyzers/sns/: unused.py
analyzers/sqs/: unused.py
analyzers/sso/: sso_audit.py
analyzers/tag_editor/: ec2_to_ebs.py  map_apply.py  map_audit.py  report.py
analyzers/transfer/: unused.py
analyzers/vpc/: __init__.py  endpoint_audit.py  eni_audit.py  inventory.py  nat_audit.py  network_analysis.py  sg_audit.py  sg_inventory.py
cli/: __init__.py  app.py  headless.py
cli/flow/: __init__.py  context.py  runner.py
cli/i18n/: __init__.py
cli/ui/: __init__.py  banner.py  console.py  main_menu.py  progress.py  search.py  service_selector.py
core/: __init__.py  config.py  exceptions.py  filter.py  types.py
core/auth/: __init__.py  account.py  auth.py  datadog_client.py  session.py
core/cli/: app.py  headless.py
core/cloudwatch/: __init__.py  batch_metrics.py
core/data/: __init__.py
core/parallel/: __init__.py  client.py  decorators.py  errors.py  executor.py  quiet.py  quotas.py  rate_limiter.py  types.py
core/region/: __init__.py  availability.py  filter.py  update_regions.py
core/scripts/: __init__.py  generate_index.py
core/tools/: __init__.py  aws_categories.py  base.py  datadog_client.py  discovery.py  tag_validator.py  types.py
core/types/: __init__.py  aliases.py  aws.py
functions/analyzers/: __init__.py
functions/reports/: __init__.py
plugins/acm/: __init__.py  unused.py
plugins/apigateway/: __init__.py  unused.py
plugins/backup/: __init__.py  audit.py  comprehensive.py
plugins/cloudformation/: __init__.py  resource_finder.py
plugins/cloudtrail/: __init__.py  security_events.py  trail_audit.py
plugins/cloudwatch/: __init__.py  alarm_orphan.py  loggroup_audit.py
plugins/codecommit/: __init__.py  repo_audit.py  unused.py
plugins/cost/: __init__.py  unused_all.py
plugins/dynamodb/: __init__.py  capacity_mode.py  unused.py
plugins/ec2/: __init__.py  ami_audit.py  ebs_audit.py  eip_audit.py  inventory.py  snapshot_audit.py  unused.py
plugins/ecr/: __init__.py  unused.py
plugins/efs/: __init__.py  unused.py
plugins/elasticache/: __init__.py  common.py  unused.py
plugins/elb/: __init__.py  alb_log.py  alb_unused.py  clb_unused.py  common.py  inventory.py  listener_rules.py  migration_advisor.py  nlb_unused.py  security_audit.py  target_group_audit.py  unused.py
plugins/eventbridge/: __init__.py  unused.py
plugins/fn/: __init__.py  comprehensive.py  provisioned.py  unused.py  versions.py
plugins/fsx/: unused.py
plugins/glue/: __init__.py  unused.py
plugins/health/: __init__.py  analysis.py  (+5 more)
reports/: __init__.py
scripts/: generate_index.py
shared/: __init__.py
tests/: __init__.py  conftest.py  test_auth_account.py  test_auth_config_loader.py  test_auth_provider_static.py  test_base_tool_runner.py  test_cli_app.py  test_cli_ui.py  test_flow_context.py  test_flow_runner.py  test_history.py  test_plugins_ebs.py  test_plugins_ec2.py  test_plugins_eip.py  test_plugins_lambda.py  test_plugins_vpc.py  test_time_utils.py
(+944 files in other folders)
