[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-automation"
dynamic = ["version", "readme", "dependencies"]
description = "AWS 운영 자동화 CLI 도구"
license = "MIT"
authors = [{name = "Euncheol Hong", email = "where906@gmail.com"}]
keywords = ["aws", "automation", "cli", "devops", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/expeor/aws-automation"
Issues = "https://github.com/expeor/aws-automation/issues"

[project.scripts]
aa = "cli.app:cli"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "moto>=5.1.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "bandit>=1.8.0",
    "safety>=3.3.0",
    "pre-commit>=4.0.0",
]
performance = [
    # Radix Tree for O(1) CIDR lookups (625x faster than linear search)
    "pytricia>=1.0.0",
]
types = [
    # boto3-stubs with essential services
    "boto3-stubs[essential]>=1.42.0",
    # Additional service stubs for all plugins
    "types-boto3-acm>=1.42.0",
    "types-boto3-apigateway>=1.42.0",
    "types-boto3-apigatewayv2>=1.42.0",
    "types-boto3-backup>=1.42.0",
    "types-boto3-cloudformation>=1.42.0",
    "types-boto3-cloudtrail>=1.42.0",
    "types-boto3-cloudwatch>=1.42.0",
    "types-boto3-codecommit>=1.42.0",
    "types-boto3-ce>=1.42.0",
    "types-boto3-dynamodb>=1.42.0",
    "types-boto3-ec2>=1.42.0",
    "types-boto3-ecr>=1.42.0",
    "types-boto3-efs>=1.42.0",
    "types-boto3-elasticache>=1.42.0",
    "types-boto3-elb>=1.42.0",
    "types-boto3-elbv2>=1.42.0",
    "types-boto3-events>=1.42.0",
    "types-boto3-fsx>=1.42.0",
    "types-boto3-glue>=1.42.0",
    "types-boto3-health>=1.42.0",
    "types-boto3-iam>=1.42.0",
    "types-boto3-kinesis>=1.42.0",
    "types-boto3-kms>=1.42.0",
    "types-boto3-lambda>=1.42.0",
    "types-boto3-logs>=1.42.0",
    "types-boto3-opensearch>=1.42.0",
    "types-boto3-organizations>=1.42.0",
    "types-boto3-pricing>=1.42.0",
    "types-boto3-rds>=1.42.0",
    "types-boto3-redshift>=1.42.0",
    "types-boto3-resource-explorer-2>=1.42.0",
    "types-boto3-route53>=1.42.0",
    "types-boto3-s3>=1.42.0",
    "types-boto3-sagemaker>=1.42.0",
    "types-boto3-secretsmanager>=1.42.0",
    "types-boto3-service-quotas>=1.42.0",
    "types-boto3-sns>=1.42.0",
    "types-boto3-sqs>=1.42.0",
    "types-boto3-sso>=1.42.0",
    "types-boto3-sso-admin>=1.42.0",
    "types-boto3-sso-oidc>=1.42.0",
    "types-boto3-sts>=1.42.0",
    "types-boto3-transfer>=1.42.0",
]

[tool.setuptools]
packages = {find = {exclude = ["tests*", "scripts*", "output*"]}}

[tool.setuptools.dynamic]
version = {file = "version.txt"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = {file = "requirements.txt"}

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", "__pycache__", "build", "dist", ".eggs", "output", "temp"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E402",    # Module level import not at top (needed for plugin CATEGORY/TOOLS pattern)
    "E501",    # Line length handled by formatter
    "SIM102",  # Nested if statements sometimes clearer than combined
    "SIM108",  # Ternary operators reduce readability for long Korean f-strings
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Gradual typing - enable more checks over time
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false
# Keep these enabled for catching real bugs
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B311", "B404", "B603", "B606", "B607", "B608"]
# B101: assert usage (normal in tests)
# B105: hardcoded password false positives (variable names containing "password")
# B311: random usage (not for security)
# B404: subprocess import (intentional for file/browser opening)
# B603: subprocess without shell (intentional for secure OS commands)
# B606: start_process_with_no_shell (intentional for secure OS commands)
# B607: partial path (open/xdg-open are standard system commands)
# B608: DuckDB queries with internal AWS data, not user input

[tool.coverage.run]
source = ["cli", "core", "shared", "analyzers", "reports"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "-q", "--basetemp=temp/pytest"]
